fixed images errors

--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
             <div class="about">About Me</div>
             <div class="about-container">
                 <div class="about-image">
-                    <img src="/images/WhatsApp_Image_2025-08-14_at_11.04.08_7dbf9d9f_kmimimicopy-removebg-preview (1) 1.png" alt="img" class="image">
+                    <img src=".images/WhatsApp_Image_2025-08-14_at_11.04.08_7dbf9d9f_kmimimicopy-removebg-preview (1) 1.png" alt="img" class="image">
                     <div class="social-links">
                        <div class="icons">
                             <a href="#"><i class="fa-brands fa-square-github"></i></a>
@@ -88,8 +88,8 @@
                         </div>
 
                         <div class="card-images">
-                            <img src="/images/Screenshot 2025-08-17 185026 1.png" alt="img" class="image1">
-                            <img src="/images/Screenshot 2025-08-17 185058 1.png" alt="img" class="image2">
+                            <img src=".images/Screenshot 2025-08-17 185026 1.png" alt="img" class="image1">
+                            <img src=".images/Screenshot 2025-08-17 185058 1.png" alt="img" class="image2">
                         </div>
 
                     </div>
@@ -102,7 +102,7 @@
                         </div>
 
                         <div class="card-images">
-                            <img src="/images/666.png" alt="img" class="image3">
+                            <img src=".images/666.png" alt="img" class="image3">
                             
                         </div>
 
@@ -117,25 +117,25 @@
                 <ul>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/Python.png" alt="python" >
+                            <img src=".Icons/Python.png" alt="python" >
                             <p>Python</p>
                         </div>
                     </li>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/javascript.png" alt="js">
+                            <img src=".Icons/javascript.png" alt="js">
                             <p>JavaScript</p>
                         </div>
                     </li>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/mysql.png" alt="mysql">
+                            <img src=".Icons/mysql.png" alt="mysql">
                             <p>MySql</p>
                         </div>
                     </li>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/php.png" alt="php">
+                            <img src=".Icons/php.png" alt="php">
                             <p>PHP</p>
                         </div>
                     </li>
@@ -147,32 +147,32 @@
                 <ul>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/react.png" alt="react">
+                            <img src=".Icons/react.png" alt="react">
                             <p>React</p>
                         </div>
                     </li>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/reactnative.png" alt="reactnative">
+                            <img src=".Icons/reactnative.png" alt="reactnative">
                             <p>Reactnative</p>
                         </div>
                     </li>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/firebase.png" alt="firebase">
+                            <img src=".Icons/firebase.png" alt="firebase">
                             <p>Firebase</p>
                         </div>
                     </li>
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/expressjs.png" alt="expressjs">
+                            <img src=".Icons/expressjs.png" alt="expressjs">
                             <p>Express js</p>
                         </div>
                     </li>
 
                     <li>
                         <div class="skill-card">
-                            <img src="/Icons/nodejs.png" alt="nodejs">
+                            <img src=".Icons/nodejs.png" alt="nodejs">
                             <p>Node js</p>
                         </div>
                     </li>
